--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Test Button</title>
+    <title>Image Gallery</title>
     <style type="text/css">
       </style>
   </head>
   <body>
+    <div class="gallery">
+      <a href="images/ohno.png"><img src="images/ohno-small.png"</a>
     </div>
-      <h1>Test Button</h1>
   </body>
   <script>
 </script>
